--- a/index_basil_20250929.html
+++ b/index_basil_20250929.html
@@ -1,99 +1,111 @@
-<HTML>
+<html>
 
-	<HEAD>
-		<TITLE>Stripe Payment Loading</TITLE>
-		<script src="https://js.stripe.com/basil/stripe.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-		.vertical-center {
-		  margin: 0;
-		  position: absolute;
-		  top: 50%;
-		  left: 50%;
-		  transform: translate(-50%, -50%);
-		}
-		
-		table.center {
-		  margin-left: auto; 
-		  margin-right: auto;
-		}
-		
-		.loader { 
-		  width:200px; 
-		  margin:0 auto;
-		  border-radius:10px;
-		  border:4px solid transparent;
-		  position:relative;
-		  padding:1px;
-		}
-		.loader:before {
-		  content:'';
-		  border:1px solid #243689; 
-		  border-radius:10px;
-		  position:absolute;
-		  top:-4px; 
-		  right:-4px; 
-		  bottom:-4px; 
-		  left:-4px;
-		}
-		.loader .loaderBar { 
-		  position:absolute;
-		  border-radius:10px;
-		  top:0;
-		  right:100%;
-		  bottom:0;
-		  left:0;
-		  background:#243689; 
-		  width:0;
-		  animation:borealisBar 2s linear infinite;
-		}
+<head>
+    <title>Stripe Payment Loading</title>
+    <script src="https://js.stripe.com/basil/stripe.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        .vertical-center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
 
-		@keyframes borealisBar {
-		  0% {
-			left:0%;
-			right:100%;
-			width:0%;
-		  }
-		  10% {
-			left:0%;
-			right:75%;
-			width:25%;
-		  }
-		  90% {
-			right:0%;
-			left:75%;
-			width:25%;
-		  }
-		  100% {
-			left:100%;
-			right:0%;
-			width:0%;
-		  }
-		}
-		</style>
-	</HEAD>
+        table.center {
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-	<BODY>
-		<DIV class="vertical-center">
-			<CENTER><H5>Loading secured payment page ...</H5></CENTER>
-			<DIV class="loader">
-			  <DIV class="loaderBar"></DIV>
-			</DIV>
-			<BR>
-			<TABLE class="center">
-				<TR valign='center'>
-					<TD><img src="new_images/visa.png" alt="Visa" class="center" width="50"></TD>
-					<TD><img src="new_images/master.png" alt="Master" class="center" width="50"></TD>
-					<TD><img src="new_images/amex.png" alt="Amex" class="center" width="50"></TD>
-					<TD><img src="new_images/unionpay.png" alt="UnionPay" class="center" width="50"></TD>
-				</TR>
-			</TABLE>
-			<TABLE class="center">
-				<TR valign='top'>
-					<TD><img src="images/stripe.png" alt="Stripe" class="center" width="50"></TD>
-				</TR>
-			</TABLE>
-		</DIV>
-	</BODY>
+        .loader {
+            width: 200px;
+            margin: 0 auto;
+            border-radius: 10px;
+            border: 4px solid transparent;
+            position: relative;
+            padding: 1px;
+        }
 
-</HTML>
+        .loader:before {
+            content: '';
+            border: 1px solid #243689;
+            border-radius: 10px;
+            position: absolute;
+            top: -4px;
+            right: -4px;
+            bottom: -4px;
+            left: -4px;
+        }
+
+        .loader .loaderBar {
+            position: absolute;
+            border-radius: 10px;
+            top: 0;
+            right: 100%;
+            bottom: 0;
+            left: 0;
+            background: #243689;
+            width: 0;
+            animation: borealisBar 2s linear infinite;
+        }
+
+        @keyframes borealisBar {
+            0% {
+                left: 0%;
+                right: 100%;
+                width: 0%;
+            }
+            10% {
+                left: 0%;
+                right: 75%;
+                width: 25%;
+            }
+            90% {
+                right: 0%;
+                left: 75%;
+                width: 25%;
+            }
+            100% {
+                left: 100%;
+                right: 0%;
+                width: 0%;
+            }
+        }
+    </style>
+</head>
+
+<body>
+<div class="vertical-center">
+    <table class="center">
+        <tr>
+            <td>
+                <h5 class="center">Loading secured payment page...</h5>
+            </td>
+        </tr>
+    </table>
+    <div class="loader">
+        <div class="loaderBar"></div>
+    </div>
+    <br>
+    <table class="center">
+        <tr>
+            <td><img src="new_images/visa.png" alt="Visa" class="center" width="50"></td>
+            <td><img src="new_images/master.png" alt="Master" class="center" width="50"></td>
+            <td><img src="new_images/amex.png" alt="Amex" class="center" width="50"></td>
+            <td><img src="new_images/unionpay.png" alt="UnionPay" class="center" width="50"></td>
+        </tr>
+    </table>
+    <table class="center">
+        <tr>
+            <td><img src="new_images/stripe.png" alt="Stripe" class="center" width="50"></td>
+        </tr>
+        <tr>
+            <td><br>
+                <p style="font-size: 10px; color: grey;">ver. 20250929</p></td>
+        </tr>
+    </table>
+</div>
+</body>
+
+</html>
